--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -14,8 +14,8 @@
     <form id="userForm">
         <div id="updateRecord" style="margin-top: 30px;">
             <h2>Update Existing Record</h2>
-            <label for="updateCve500">CVE500 Number</label>
-            <input type="text" id="updateCve500" maxlength="10" placeholder="Enter CVE500 Number to Update">
+            <label for="updateInspectionNumber">Inspection Number</label>
+            <input type="text" id="updateInspectionNumber" maxlength="10" placeholder="Enter Inspection Number to Update">
 
             <label for="updateEmail">Email</label>
             <input type="email" id="updateEmail" placeholder="Enter Email to Lookup">
