--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -43,6 +43,13 @@
             <input type="radio" id="training" name="download_type" value="training">
             <label for="training">Training</label>
 
+            <label for="myRadio" class = "radio">
+                <input type="radio" name = "myRadioField" id ="myRadioID" class= "radio__input">
+                <div class="radio__radio">
+                    <!-- virtual element -->
+                </div>
+            </label>
+
 
             <label for="operator">Operator</label>
             <select id="operator" name="operator" required>
