--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -97,8 +97,8 @@
                 <option value="">Select Engine Make</option>
             </select>
 
-            <label for="model_make">Engine Model</label>
-            <select id="model_make" name="model_make">
+            <label for="engine_model">Engine Model</label>
+            <select id="engine_model" name="engine_model">
                 <option value="">Select Engine Model</option>
             </select>
             
