--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -255,8 +255,8 @@
                 <option value="Yes">No</option>
             </select>
 
-           <label for="UnitType">Unit Type</label>
-            <select id="UnitType" name="UnitType" required>
+           <label for="unitType">Unit Type</label>
+            <select id="unitType" name="unitType" required>
                 <option value="SelectValue">Select Value</option>
                 <option value="Box Truck">Box Truck</option>
                 <option value="Tractor">Tractor</option>
