--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -46,13 +46,34 @@
             <label for="operator">Operator</label>
             <select id="operator" name="operator">
                 <option value="">Select an Operator</option>
-
+                <option value="L.A. Peele">L.A. Peele</option>
+                <option value="D.L. Braswell">D.L. Braswell</option>
+                <option value="J.L. Arnette">J.L. Arnette</option>
+                <option value="M.G. Conley">M.G. Conley</option>
+                <option value="M.A. Cannon">M.A. Cannon</option>
+                <option value="C.M. McGinnis">C.M. McGinnis</option>
+                <option value="J. Elledge">J. Elledge</option>
+                <option value="D.F. Smith">D.F. Smith</option>
+                <option value="B.M. Albertson">B.M. Albertson</option>
+                <option value="C.S. Grainger">C.S. Grainger</option>
             </select>
+
 
             <label for="technician">Technician</label>
             <select id="technician" name="technician">
                 <option value="">Select a Technician</option>
+                <option value="L.A. Peele">L.A. Peele</option>
+                <option value="D.L. Braswell">D.L. Braswell</option>
+                <option value="J.L. Arnette">J.L. Arnette</option>
+                <option value="M.G. Conley">M.G. Conley</option>
+                <option value="M.A. Cannon">M.A. Cannon</option>
+                <option value="C.M. McGinnis">C.M. McGinnis</option>
+                <option value="J. Elledge">J. Elledge</option>
+                <option value="D.F. Smith">D.F. Smith</option>
+                <option value="B.M. Albertson">B.M. Albertson</option>
+                <option value="C.S. Grainger">C.S. Grainger</option>
             </select>
+
             
             <label for="e_mail">Email</label>
             <input type="email" id="e_mail" name="e_mail" required placeholder="Enter Email for Notification">
