--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -292,6 +292,6 @@
             <button type="submit">Submit Record</button>
         </div>
     </form>
-    <script src="SOAP_Data_Collection.js"></script>
+    <script src="CRU_Data_Collection.js"></script>
 </body>
 </html>
