--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -262,22 +262,22 @@
                 Hold down the <strong>Ctrl</strong> key (or <strong>Cmd</strong> on Mac) to select multiple options.
             </p>
 
-            <label for="PostCrashTrailerUsed">Post-Crash Trailer Used?</label>
-            <select id="PostCrashTrailerUsed" name="PostCrashTrailerUsed" required>
+            <label for="post_crash_trailer_used">Post-Crash Trailer Used?</label>
+            <select id="post_crash_trailer_used" name="post_crash_trailer_used" required>
                 <option value="SelectValue">Select Value</option>
                 <option value="Yes">Yes</option>
                 <option value="Yes">No</option>
             </select>
 
-            <label for="Warrant">Warrant Necessary?</label>
-            <select id="Warrant" name="Warrant" required>
+            <label for="warrant">Warrant Necessary?</label>
+            <select id="warrant" name="warrant" required>
                 <option value="SelectValue">Select Value</option>
                 <option value="Yes">Yes</option>
                 <option value="Yes">No</option>
             </select>
 
-            <label for="unitType">Unit Type</label>
-            <select id="unitType" name="unitType" required>
+            <label for="unit_type">Unit Type</label>
+            <select id="unit_type" name="unit_type" required>
                 <option value="SelectValue">Select Value</option>
                 <option value="Box Truck">Box Truck</option>
                 <option value="Tractor">Tractor</option>
@@ -287,7 +287,7 @@
             </select>
 
             <label for="notes">Notes</label>
-            <input type = "text" id="notes" name="notes" required placeholder="Enter Notes:">
+            <input type = "text" id="notes" name="notes" placeholder="Enter Notes:">
 
             <button type="submit">Submit Record</button>
         </div>
