--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -266,7 +266,7 @@
             <select id="post_crash_trailer_used" name="post_crash_trailer_used" required>
                 <option value="SelectValue">Select Value</option>
                 <option value="Yes">Yes</option>
-                <option value="Yes">No</option>
+                <option value="No">No</option>
             </select>
 
             <label for="warrant">Warrant Necessary?</label>
