--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -44,7 +44,7 @@
 
 
             <label for="operator">Operator</label>
-            <select id="operator" name="operator">
+            <select id="operator" name="operator" required>
                 <option value="">Select an Operator</option>
                 <option value="L.A. Peele">L.A. Peele</option>
                 <option value="D.L. Braswell">D.L. Braswell</option>
@@ -60,7 +60,7 @@
 
 
             <label for="technician">Technician</label>
-            <select id="technician" name="technician">
+            <select id="technician" name="technician" required>
                 <option value="">Select a Technician</option>
                 <option value="L.A. Peele">L.A. Peele</option>
                 <option value="D.L. Braswell">D.L. Braswell</option>
@@ -115,7 +115,7 @@
             <input type="time" id="time" name="time">
 
             <label for="engine_make">Engine Make</label>
-            <select id="engine_make" name="Engine_make">
+            <select id="engine_make" name="Engine_make" required>
                 <option value="">Select Engine Make</option>
                 <option value="Bendix">Bendix</option>
                 <option value="Cascadia">Cascadia</option>
@@ -138,7 +138,7 @@
 
 
             <label for="engine_model">Engine Model</label>
-            <select id="engine_model" name="engine_model">
+            <select id="engine_model" name="engine_model" required>
                 <option value="">Select Engine Model</option>
                 <option value="3406/C15/C16">3406/C15/C16</option>
                 <option value="A26">A26</option>
@@ -179,7 +179,7 @@
             
             <!--ensure the this added to the js script-->
             <label for="engine_year">Engine Year</label>
-            <select id="engine_year" name="engine_year">
+            <select id="engine_year" name="engine_year" required>
                 <option value="">Select Engine Year</option>
                 <!-- Dynamically generated years -->
                 <option value="1990">1990</option>
