--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -46,32 +46,57 @@
             <label for="operator">Operator</label>
             <select id="operator" name="operator" required>
                 <option value="">Select an Operator</option>
-                <option value="L.A. Peele">L.A. Peele</option>
-                <option value="D.L. Braswell">D.L. Braswell</option>
-                <option value="J.L. Arnette">J.L. Arnette</option>
-                <option value="M.G. Conley">M.G. Conley</option>
-                <option value="M.A. Cannon">M.A. Cannon</option>
-                <option value="C.M. McGinnis">C.M. McGinnis</option>
-                <option value="J. Elledge">J. Elledge</option>
-                <option value="D.F. Smith">D.F. Smith</option>
-                <option value="B.M. Albertson">B.M. Albertson</option>
+                <option value="J.E. Britt">J.E. Britt</option>
+                <option value="E.A. Barrera">E.A. Barrera</option>
+                <option value="K.D. Locklear">K.D. Locklear</option>
+                <option value="R.N. Cook">R.N. Cook</option>
+                <option value="J.E. McDonald">J.E. McDonald</option>
+                <option value="B.R. Jefferson">B.R. Jefferson</option>
+                <option value="E.A. Burrell">E.A. Burrell</option>
+                <option value="M.C. Bailey">M.C. Bailey</option>
+                <option value="E.R. Schwartz">E.R. Schwartz</option>
                 <option value="C.S. Grainger">C.S. Grainger</option>
+                <option value="J.T. Keeter">J.T. Keeter</option>
+                <option value="A.T. Doss">A.T. Doss</option>
+                <option value="A.W. Beck">A.W. Beck</option>
+                <option value="J.R. Cochran">J.R. Cochran</option>
+                <option value="J.L. Dunlap">J.L. Dunlap</option>
+                <option value="D.M. Pennell">D.M. Pennell</option>
+                <option value="T.C. Williams">T.C. Williams</option>
+                <option value="C.L. Moore">C.L. Moore</option>
+                <option value="S.L. Geraro">S.L. Geraro</option>
+                <option value="K.R. Genao">K.R. Genao</option>
+                <option value="C.M. McLaurin">C.M. McLaurin</option>
+                <option value="M.G. Conley">M.G. Conley</option>
             </select>
+
 
 
             <label for="technician">Technician</label>
             <select id="technician" name="technician" required>
-                <option value="">Select a Technician</option>
-                <option value="L.A. Peele">L.A. Peele</option>
-                <option value="D.L. Braswell">D.L. Braswell</option>
-                <option value="J.L. Arnette">J.L. Arnette</option>
-                <option value="M.G. Conley">M.G. Conley</option>
-                <option value="M.A. Cannon">M.A. Cannon</option>
-                <option value="C.M. McGinnis">C.M. McGinnis</option>
-                <option value="J. Elledge">J. Elledge</option>
-                <option value="D.F. Smith">D.F. Smith</option>
-                <option value="B.M. Albertson">B.M. Albertson</option>
+                <option value="">Select an Operator</option>
+                <option value="J.E. Britt">J.E. Britt</option>
+                <option value="E.A. Barrera">E.A. Barrera</option>
+                <option value="K.D. Locklear">K.D. Locklear</option>
+                <option value="R.N. Cook">R.N. Cook</option>
+                <option value="J.E. McDonald">J.E. McDonald</option>
+                <option value="B.R. Jefferson">B.R. Jefferson</option>
+                <option value="E.A. Burrell">E.A. Burrell</option>
+                <option value="M.C. Bailey">M.C. Bailey</option>
+                <option value="E.R. Schwartz">E.R. Schwartz</option>
                 <option value="C.S. Grainger">C.S. Grainger</option>
+                <option value="J.T. Keeter">J.T. Keeter</option>
+                <option value="A.T. Doss">A.T. Doss</option>
+                <option value="A.W. Beck">A.W. Beck</option>
+                <option value="J.R. Cochran">J.R. Cochran</option>
+                <option value="J.L. Dunlap">J.L. Dunlap</option>
+                <option value="D.M. Pennell">D.M. Pennell</option>
+                <option value="T.C. Williams">T.C. Williams</option>
+                <option value="C.L. Moore">C.L. Moore</option>
+                <option value="S.L. Geraro">S.L. Geraro</option>
+                <option value="K.R. Genao">K.R. Genao</option>
+                <option value="C.M. McLaurin">C.M. McLaurin</option>
+                <option value="M.G. Conley">M.G. Conley</option>
             </select>
 
             
