--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -249,7 +249,7 @@
             <input type="text" id="inspection_number" name="inspection_number" maxlength="10" required placeholder="Enter Inspection Number">
 
             <label for="dmv349_report_number">DMV349 Report Number</label>
-            <input type="text" id="dmv349_report_number" name="dmv349_report_number" maxlength="10" required placeholder="Enter DMV 349 Report Number">
+            <input type="text" id="dmv349_report_number" name="dmv349_report_number" maxlength="10" placeholder="Enter DMV 349 Report Number">
 
             <label for="software_used">Software Used</label>
             <select id="software_used" name="software_used" multiple required>
