--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -246,7 +246,7 @@
             </select>
        
        
-            <label for="inspection_number">Inspection Number</label>
+            <label for="inspection_number">Inspection Number (Auto-generated for Training Downloads)</label>
             <input type="text" id="inspection_number" name="inspection_number" maxlength="10" required placeholder="Enter Inspection Number">
 
             <label for="dmv349_report_number">DMV349 Report Number</label>
