--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -317,6 +317,21 @@
 
             <button type="submit">Submit Record</button>
         </div>
+
+        <script>
+        function validateSelection() {
+            const dropdown = document.getElementById("unit_id");
+            const selectedValue = dropdown.value;
+
+            if (selectedValue === "selectedValue") {
+                alert("Please select a valid option!");
+            } else {
+                
+                // proceed with form submission or other logic
+            }
+        }
+        </script>
+
     </form>
     <script src="CRU_Data_Collection.js" defer></script>
 </body>
