--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -93,9 +93,9 @@
                 <option value="D.M. Pennell">D.M. Pennell</option>
                 <option value="T.C. Williams">T.C. Williams</option>
                 <option value="C.L. Moore">C.L. Moore</option>
-                <option value="S.L. Geraro">S.L. Geraro</option>
+                <option value="S.L. Geraro">S.L. Gerard</option>
                 <option value="K.R. Genao">K.R. Genao</option>
-                <option value="C.M. McLaurin">C.M. McLaurin</option>
+                <option value="C.M. McLaurin">C.M. McGinnis</option>
                 <option value="M.G. Conley">M.G. Conley</option>
             </select>
 
@@ -193,6 +193,8 @@
                 <option value="Maxxforce">Maxxforce</option>
                 <option value="MP8">MP8</option>
                 <option value="MX/MX-13">MX/MX-13</option>
+                <option value="PX-7">PX-7</option>
+                <option value="PX-9">PX-9</option>
                 <option value="Series 60">Series 60</option>
                 <option value="Stoughton">Stoughton</option>
                 <option value="T600">T600</option>
