--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -44,7 +44,7 @@
 
 
             <label for="operator">Operator</label>
-            <select id="operator" name="operator" required>
+            <select id="operator" name="operator">
                 <option value="">Select an Operator</option>
                 <option value="J.E. Britt">J.E. Britt</option>
                 <option value="E.A. Barrera">E.A. Barrera</option>
@@ -95,7 +95,7 @@
                 <option value="C.L. Moore">C.L. Moore</option>
                 <option value="S.L. Geraro">S.L. Gerard</option>
                 <option value="K.R. Genao">K.R. Genao</option>
-                <option value="C.M. McLaurin">C.M. McGinnis</option>
+                <option value="C.M. McLaurin">C.M. McLaurin</option>
                 <option value="M.G. Conley">M.G. Conley</option>
             </select>
 
