--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -312,6 +312,7 @@
                 <option value="Dump Truck">Dump Truck</option>
                 <option value="Trailer">Trailer</option>
                 <option value="School Bus">School Bus</option>
+                <option value="Straight Truck">Straight Truck</option>
             </select>
 
             <label for="notes">Notes</label>
