added ITRE logo and powered by logos

--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -336,6 +336,27 @@
         </script>
 
     </form>
+
+
+
+    <footer>
+        <div class="footer-content">
+            <div class="powered-by-line">
+                <img src="powered_by.svg" alt="Icon" class="footer-icon">
+                <em>Powered by</em>
+            </div>
+            <div class="logo-line">
+                <a href="https://coverlab.org" target="_blank" rel="noopener noreferrer" title="Visit COVERLab">
+                    <img src="ITRE_Logo.png" alt="ITRE Logo" class="footer-logo">
+                </a>
+            </div>
+            <div class="contact-line">
+                <img src="email.svg" alt="Email" class="footer-icon">
+                <a href="mailto:help@coverlab.org">help@coverlab.org</a>
+            </div>
+        </div>
+    </footer>
+
     <script src="CRU_Data_Collection.js" defer></script>
 </body>
 </html>
