--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -46,6 +46,7 @@
             <label for="operator">Operator</label>
             <select id="operator" name="operator">
                 <option value="">Select an Operator</option>
+                <option value="C. McGinnis">C. McGinnis</option>
                 <option value="J.E. Britt">J.E. Britt</option>
                 <option value="E.A. Barrera">E.A. Barrera</option>
                 <option value="K.D. Locklear">K.D. Locklear</option>
@@ -75,6 +76,7 @@
             <label for="technician">Technician</label>
             <select id="technician" name="technician" required>
                 <option value="">Select an Operator</option>
+                <option value="C. McGinnis">C. McGinnis</option>
                 <option value="J.E. Britt">J.E. Britt</option>
                 <option value="E.A. Barrera">E.A. Barrera</option>
                 <option value="K.D. Locklear">K.D. Locklear</option>
@@ -359,4 +361,5 @@
 
     <script src="CRU_Data_Collection.js" defer></script>
 </body>
+
 </html>
