--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -40,6 +40,7 @@
                 <option value="SHP Download">SHP Download</option>
                 <option value="Allied Agency">Allied Agency</option>
                 <option value="Training Download">Training Download</option>
+                <option value="None">None</option>
             </select>
 
 
@@ -363,3 +364,4 @@
 </body>
 
 </html>
+
