Added Na to fields

--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -145,6 +145,7 @@
             <label for="engine_make">Engine Make</label>
             <select id="engine_make" name="Engine_make" required>
                 <option value="">Select Engine Make</option>
+                <option value="N/A">N/A</option>
                 <option value="Bendix">Bendix</option>
                 <option value="Cascadia">Cascadia</option>
                 <option value="Caterpillar">Caterpillar</option>
@@ -168,6 +169,7 @@
             <label for="engine_model">Engine Model</label>
             <select id="engine_model" name="engine_model" required>
                 <option value="">Select Engine Model</option>
+                <option value="N/A">N/A</option>
                 <option value="3406/C15/C16">3406/C15/C16</option>
                 <option value="A26">A26</option>
                 <option value="ABS Module">ABS Module</option>
@@ -212,6 +214,7 @@
             <select id="engine_year" name="engine_year" required>
                 <option value="">Select Engine Year</option>
                 <!-- Dynamically generated years -->
+                <option value="N/A">N/A</option>
                 <option value="1990">1990</option>
                 <option value="1991">1991</option>
                 <option value="1992">1992</option>
@@ -259,6 +262,7 @@
 
             <label for="software_used">Software Used</label>
             <select id="software_used" name="software_used" multiple required>
+                <option value="N/A">N/A</option>
                 <option value="Bendix">Bendix</option>
                 <option value="Cummins Insite">Cummins Insite</option>
                 <option value="Davie">Davie</option>
@@ -281,6 +285,7 @@
 
             <label for="equipment_used">Equipment Used</label>
             <select id="equipment_used" name="equipment_used" multiple required>
+                <option value="N/A">N/A</option>
                 <option value="Diesel Decoder">Diesel Decoder</option>
                 <option value="FLA">FLA</option>
                 <option value="FLA/SSS2">FLA/SSS2</option>
@@ -316,6 +321,7 @@
                 <option value="Trailer">Trailer</option>
                 <option value="School Bus">School Bus</option>
                 <option value="Straight Truck">Straight Truck</option>
+                 <option value="N/A">N/A</option>
             </select>
 
             <label for="notes">Notes</label>
@@ -364,4 +370,5 @@
 </body>
 
 </html>
+
 
