added new operator

--- a/CRU_Data_Collection.html
+++ b/CRU_Data_Collection.html
@@ -48,6 +48,7 @@
             <select id="operator" name="operator">
                 <option value="">Select an Operator</option>
                 <option value="C. McGinnis">C. McGinnis</option>
+                <option value="B. M. Albertson">B. M. Albertson</option>
                 <option value="J.E. Britt">J.E. Britt</option>
                 <option value="E.A. Barrera">E.A. Barrera</option>
                 <option value="K.D. Locklear">K.D. Locklear</option>
@@ -78,6 +79,7 @@
             <select id="technician" name="technician" required>
                 <option value="">Select an Operator</option>
                 <option value="C. McGinnis">C. McGinnis</option>
+                <option value="B. M. Albertson">B. M. Albertson</option>
                 <option value="J.E. Britt">J.E. Britt</option>
                 <option value="E.A. Barrera">E.A. Barrera</option>
                 <option value="K.D. Locklear">K.D. Locklear</option>
@@ -370,5 +372,6 @@
 </body>
 
 </html>
+
 
 
